# PassMgrPrototype

./: Cargo.toml  README.md
ciphers/: Cargo.toml
ciphers/src/: bip39.rs  cipher_chain.rs  lib.rs  master_keys.rs  master_password.rs  structures.rs
consensus/raft-kv-sledstore-grpc/: Cargo.toml  README.md  build.rs
consensus/raft-kv-sledstore-grpc/src/: app.rs
consensus/raft-kv-sledstore-grpc/src/store/: mod.rs
consensus/sledstore/: Cargo.toml
consensus/sledstore/src/: lib.rs  log_store.rs
crypto/: Cargo.toml
crypto/src/: bip39.rs  cipher_chain.rs  lib.rs  master_keys.rs  structures.rs
docs/: masterplan.md
docs/research/: Bitwarden_server_data_structure.md  KeePassXC_data_structure.md  ProtonPass_data_structure.md  Zebra_Pass_data_structure.md
network/: Cargo.toml
passmgr-cli/: Cargo.toml  README.md
passmgr-cli/src/: main.rs
passmgr-gui/: Cargo.toml
rpc/: Cargo.toml  build.rs
rpc/proto/: raft-int.proto  raft-mgr.proto  rpc-passmgr.proto
rpc/src/: lib.rs
server/: Cargo.toml  build.rs
server/proto/: passmgr.proto
server/src/: main.rs
storage/: Cargo.toml
storage/src/: db.rs  error.rs  lib.rs  structures.rs  user_db.rs
