[workspace]
members = [
    "crypto",
    "rpc",
    "storage",
    "server",
    "network",
    "passmgr-cli",
    "passmgr-gui",
]
resolver = "2"

[workspace.dependencies]
bincode = "1.3"
crystals-dilithium = "1.0.0"
dirs = "6.0"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
sled = "0.34"
thiserror = "2.0.6"
futures = "0.3"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }