[package]
name = "ciphers"
version = "0.0.5"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std", "password-hash"]}
chacha20poly1305 = { version = "0.10", features = ["std"] }
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
rand_core = "0.6.4"
sha2 = "0.10"
thiserror.workspace = true
