[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
tonic = { version = "0.12.2", features = ["transport", "codegen", "tls"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
storage = { path = "../storage" }
anyhow = "1.0"
rand = "0.8"
time = "0.3"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }

dirs.workspace = true
sled.workspace = true

[build-dependencies]
tonic-build = "0.12.2"