[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
tonic = { version = "0.12.2", features = ["transport", "codegen", "tls"] }

tokio = { version = "1", features = ["full"] }

storage = { path = "../storage" }
passmgr-rpc = { path = "../rpc" }
anyhow = "1.0"
rand = "0.8"
time = "0.3"

tokio-stream = { version = "0.1", features = ["net"] }

dirs.workspace = true
futures.workspace = true
prost.workspace = true
sled.workspace = true
uuid.workspace = true