[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
tonic = { version = "0.12.2", features = ["transport", "codegen", "tls"] }

tokio = { version = "1", features = ["full"] }

crypto = { path = "../crypto" }
storage = { path = "../storage" }
passmgr-rpc = { path = "../rpc" }
anyhow = "1.0"
rand = "0.8"

tokio-stream = { version = "0.1", features = ["net"] }

bincode.workspace = true
crystals-dilithium.workspace = true
dirs.workspace = true
futures.workspace = true
prost.workspace = true
serde.workspace = true
sled.workspace = true
uuid.workspace = true