[package]
name = "raft-kv-sledstore-grpc"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = [
    "Konstantin Sh",
    "Sainath Singineedi <sainathsingineedi2222@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example distributed key-value store built upon `openraft`."
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[[bin]]
name = "raft-key-value"
path = "src/bin/main.rs"

[dependencies]
sledstore = { path = "../sledstore", features = [] }
openraft = { git = "https://github.com/databendlabs/openraft.git", branch = "release-0.10", features = ["type-alias"] }

clap = { version = "4.1.11", features = ["derive", "env"] }
dirs = "6.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
sled = "0.34"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tonic = "0.12.3"
tonic-build = "0.12.3"
dashmap = "6.1.0"
prost = "0.13.4"
futures = "0.3.31"

[dev-dependencies]
anyhow = "1.0.63"
maplit = "1.0.2"

[features]

[build-dependencies]
prost-build = "0.13.4"
tonic-build = "0.12.3"

[package.metadata.docs.rs]
all-features = true
