[package]
name = "sledstore"
version = "0.1.0"
readme = "README.md"

edition = "2021"
authors = [
    "drdr xp <drdr.xp@gmail.com>",
]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example in-memory storage for `openraft`."
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

[dependencies]
openraft = { git = "https://github.com/databendlabs/openraft.git", branch = "release-0.10", features = ["type-alias", "serde"] }


bincode = "1.3"
sled = "0.34"
tokio = { version = "1.0", default-features = false, features = ["sync"] }

byteorder = "1.4.3"

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tracing = { version = "0.1.40" }

[features]

serde = ["openraft/serde"]

[package.metadata.docs.rs]
all-features = true
